- new algorithm for constructing neighbor list.
- mode interactive now offers a command-line interpreter, much more flexible than the former "interactive questions". The cli allows to read and write files, supports options and the mode "create", and can take scripts as standard input (e.g. "atomsk < script.at").
- mode "--rdf" now constructs a neighbor list before computing the radial distribution functions (RDFs). Also, the maximum radius Rmax for the RDF must be provided, and Rmax can be larger than the system.
- modes "--edm" and "--rdf" now prompt the user if the option "-wrap" is absent in the command-line.
- option "-deform" now interprets real numbers as the value of the deformation. The symbol "%" must be used to specify a deformation in percent, e.g. "-deform x 1.5% 0.0".
- option "-properties" allows to read atom velocities from a file.
- option "-remove-atoms" can now remove all selected atoms with "-remove-atoms select".
- option "-remove-doubles" now only removes selected atoms if a selection is defined.
- option "-remove-properties" does not remove the auxiliary property anymore if a selection is defined, instead the property is set to zero for selected atoms. If no selection is defined the property is still completely removed.
- option "-rotate" now also rotates atom velocity and force vectors if they are defined.
- option "-select" now allows to select atoms within a range of indices. This option also allows to select the neighbors of an atom. The selection can be on the N nearest neighbors, or neighbors within a radius, or the first nearest neighbors. This option also allows to select a given percentage of the atoms, or a percentage of atoms of a given species. This option also allows to select atoms who have an auxiliary property within a given range of values.
- option "-unit" allows to convert atom velocities.
- option "-wrap" now only wraps selected atoms if a selection is defined.