@@ -26,7 +26,7 @@
     <li><a href="./mode_average.html">Average</a> - Average atom positions over several configurations</li>
     <li><a href="./mode_create.html">Create</a> - Create a system from scratch</li>
     <li><a href="./mode_ddplot.html">ddplot</a> - Create a file for visualization with the ddplot program</li>
-    <li><a href="./mode_filelist.html">File list</a> - Convert all files in a list</li>
+    <li><a href="./mode_filelist.html">List</a> - Convert all files in a list</li>
     <li><a href="./mode_help.html">Help</a> - Displays help</li>
     <li><a href="./mode_interactive.html">Interactive</a> - Manipulate systems interactively or with scripts</li>
     <li><a href="./mode_interpolate.html">Interpolate</a> - Interpolates atom positions between two configurations</li>
