@@ -13,7 +13,7 @@
 
 <p><strong><em>Atom</em>/<em>M</em>olecule/<em>M</em>aterial <em>S</em>oftware <em>K</em>it</strong></p>
 
-<p>&copy; P. Hirel 2010 - Version Beta 0.8-2014.09.24</p>
+<p>&copy; P. Hirel 2010 - Version Beta 0.8-2014.09.25</p>
 
 
 
@@ -72,7 +72,7 @@
     <li><a href="./mode_average.html">Average</a> - Moyenner les positions atomiques de plusieurs configurations</li>
     <li><a href="./mode_create.html">Create</a> - Créer un système à partir de rien</li>
     <li><a href="./mode_ddplot.html">ddplot</a> - Créer un fichier pour visualisation avec le programme ddplot</li>
-    <li><a href="./mode_filelist.html">File list</a> - Convertir tous les fichiers d'une liste</li>
+    <li><a href="./mode_filelist.html">Liste</a> - Convertir tous les fichiers d'une liste</li>
     <li><a href="./mode_help.html">Help</a> - Afficher l'aide</li>
     <li><a href="./mode_interactive.html">Interactive</a> - Manipuler des systèmes interactivement ou avec des scripts</li>
     <li><a href="./mode_interpolate.html">Interpolate</a> - Interpoler les positions des atomes entre deux configurations</li>
