@@ -26,7 +26,7 @@
     <li><a href="./mode_average.html">Average</a> - Moyenner les positions atomiques de plusieurs configurations</li>
     <li><a href="./mode_create.html">Create</a> - Créer un système à partir de rien</li>
     <li><a href="./mode_ddplot.html">ddplot</a> - Créer un fichier pour visualisation avec le programme ddplot</li>
-    <li><a href="./mode_filelist.html">File list</a> - Convertir tous les fichiers d'une liste</li>
+    <li><a href="./mode_filelist.html">Liste</a> - Convertir tous les fichiers d'une liste</li>
     <li><a href="./mode_help.html">Help</a> - Afficher l'aide</li>
     <li><a href="./mode_interactive.html">Interactive</a> - Si vous aimez discuter avec un programme</li>
     <li><a href="./mode_interpolate.html">Interpolate</a> - Manipuler des systèmes interactivement ou avec des scripts</li>
